Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,14 @@ stages:
         - task: TerraformInstaller@1
           inputs:
                 terraformVersion: 'latest'
-                
+        - task: TerraformTaskV4@4
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            backendServiceArm: 'azuredevops_azurerm_svc'
+            backendAzureRmResourceGroupName: 'terra'
+            backendAzureRmStorageAccountName: 'terraformstatefileaccoun'
+            backendAzureRmContainerName: 'tfstate'
+            backendAzureRmKey: 'aks-test.tfstate'
                 
         
