Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,11 @@ stages:
             backendAzureRmStorageAccountName: 'terraformstatefileaccoun'
             backendAzureRmContainerName: 'tfstate'
             backendAzureRmKey: 'aks-test.tfstate'
-                
+        - task: TerraformTaskV4@4
+          inputs:
+            provider: 'azurerm'
+            command: 'validate'
+            
+
+            
         
