--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,11 @@ stages:
       - job: terraformValidate
         continueOnError: true
         steps:
-        - task: PublishPipelineArtifact@1
-          inputs:
-            targetPath: '$(Pipeline.Workspace)'
-            artifact: 'Published-artifacts'
-            publishLocation: 'pipeline'
+         - task: PublishPipelineArtifact@1
+           inputs:
+             targetPath: '$(Pipeline.Workspace)'
+             artifact: '$(System.DefaultWorkingDirectory)/terraform'
+             publishLocation: 'pipeline'
+         - task: TerraformInstaller@2
+           inputs:
+             terraformVersion: 'latest'
