Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,16 @@ stages:
          - task: TerraformInstaller@2
            inputs:
              terraformVersion: 'latest'
+         - task: TerraformCLI@2
+           inputs:
+             command: 'init'
+             backendType: 'azurerm'
+             backendServiceArm: 'azuredevops_azurerm_svc'
+             backendAzureRmTenantId: '7f5d0ec3-9d25-483c-a6c6-39e56fd9db66'
+             backendAzureRmSubscriptionId: 'bff82eda-d9d9-4e19-bb6e-e0aeb60c5ad7'
+             backendAzureRmResourceGroupName: 'terraform'
+             backendAzureRmStorageAccountName: 'terraformstatefileaccoun'
+             backendAzureRmContainerName: 'tfstate'
+             backendAzureRmKey: 'aks-test.tfstate'
+             allowTelemetryCollection: false
+             
