--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,8 @@ stages:
              backendAzureRmContainerName: 'tfstate'
              backendAzureRmKey: 'aks-test.tfstate'
              allowTelemetryCollection: false
-             
+         - task: TerraformCLI@2
+           inputs:
+             command: 'validate'
+             allowTelemetryCollection: false
+
