--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,9 @@ trigger:
   - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: 'Default'  
+  demands:
+  - agent.name -equals pragya
 
 # Define Variables
 variables:
