--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,11 @@ stages:
       - job: terraformValidate
         continueOnError: true
         steps:
-         
+         - task: PublishPipelineArtifact@1
+           inputs:
+             targetPath: '(System.DefaultWorkingDirectory)/terraform-manifests'
+             artifact: 'PublishedArtifacts'
+             publishLocation: 'pipeline'
          - task: TerraformInstaller@2
            inputs:
              terraformVersion: 'latest'
